--- a/contracts/scripts/data/swappable/updated-swappable-datum.json
+++ b/contracts/scripts/data/swappable/updated-swappable-datum.json
@@ -20,7 +20,7 @@
           "int": 18446744073709551615
         },
         {
-          "int": 0
+          "int": 18446744073709551615
         },
         {
           "int": 0
