--- a/contracts/scripts/data/swappable/buyer-swappable-datum.json
+++ b/contracts/scripts/data/swappable/buyer-swappable-datum.json
@@ -17,7 +17,7 @@
           "bytes": ""
         },
         {
-          "int": 18446744073709551615
+          "int": 0
         },
         {
           "int": 0
