--- a/contracts/scripts/data/swappable/updated-swappable-datum.json
+++ b/contracts/scripts/data/swappable/updated-swappable-datum.json
@@ -9,7 +9,12 @@
         },
         {
           "bytes": ""
-        },
+        }
+      ]
+    },
+    {
+      "constructor": 0,
+      "fields": [
         {
           "bytes": ""
         },
@@ -17,11 +22,13 @@
           "bytes": ""
         },
         {
-          "int": 18446744073709551615
-        },
-        {
-          "int": 18446744073709551615
-        },
+          "int": 0
+        }
+      ]
+    },
+    {
+      "constructor": 0,
+      "fields": [
         {
           "int": 0
         },
