--- a/contracts/scripts/data/swappable/seller-swappable-datum.json
+++ b/contracts/scripts/data/swappable/seller-swappable-datum.json
@@ -9,7 +9,12 @@
         },
         {
           "bytes": ""
-        },
+        }
+      ]
+    },
+    {
+      "constructor": 0,
+      "fields": [
         {
           "bytes": "f61e1c1d38fc4e5b0734329a4b7b820b76bb8e0729458c153c4248ea"
         },
@@ -18,10 +23,12 @@
         },
         {
           "int": 12345
-        },
-        {
-          "int": 0
-        },
+        }
+      ]
+    },
+    {
+      "constructor": 0,
+      "fields": [
         {
           "int": 0
         },
