--- a/contracts/swap-contract/swap-contract.cabal
+++ b/contracts/swap-contract/swap-contract.cabal
@@ -56,6 +56,8 @@ library
                       , plutus-script-utils
                       , serialise
                       , useful-funcs
+                      , plutonomy
+
 
   ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
 
