added in reduce data structures

--- a/contracts/swap-contract/swap-contract.cabal
+++ b/contracts/swap-contract/swap-contract.cabal
@@ -47,6 +47,7 @@ library
 
   exposed-modules:      SwapContract
                         SwappableDataType
+                        ReducedData
 
   build-depends:        bytestring
                       , cardano-api
