going to continue with thismin max version

--- a/contracts/swap-contract/swap-contract.cabal
+++ b/contracts/swap-contract/swap-contract.cabal
@@ -47,6 +47,7 @@ library
 
   exposed-modules:      SwapContract
                         SwappableDataType
+                        ReducedData
 
   build-depends:        bytestring
                       , cardano-api
@@ -56,6 +57,7 @@ library
                       , plutus-script-utils
                       , serialise
                       , useful-funcs
+                      , plutonomy
 
   ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
 
