--- a/contracts/cabal.project
+++ b/contracts/cabal.project
@@ -329,3 +329,11 @@ source-repository-package
   location: https://github.com/logicalmechanism/useful-funcs
   tag: 728851d70938b712817c6b93ee544e54e0703171
   subdir: useful-funcs
+
+source-repository-package
+  type: git
+  location: https://github.com/well-typed/plutonomy.git
+  tag: 7ce62857c9fcad4465de66a36d4343d6e02b2a86
+
+package plutonomy
+  flags: +plutus-f680ac697
