pushing to see which improvement branch is best

--- a/contracts/swap-contract/swap-contract.cabal
+++ b/contracts/swap-contract/swap-contract.cabal
@@ -47,6 +47,7 @@ library
 
   exposed-modules:      SwapContract
                         SwappableDataType
+                        ReducedFunctions
 
   build-depends:        bytestring
                       , cardano-api
