--- a/contracts/scripts/data/swappable/updated-swappable-datum.json
+++ b/contracts/scripts/data/swappable/updated-swappable-datum.json
@@ -25,7 +25,7 @@
           "int": 18446744073709551615
         },
         {
-          "int": 18446744073709551615
+          "int": 0
         }
       ]
     },
