--- a/contracts/scripts/data/swappable/seller-swappable-datum.json
+++ b/contracts/scripts/data/swappable/seller-swappable-datum.json
@@ -22,7 +22,7 @@
           "bytes": ""
         },
         {
-          "int": 123456789
+          "int": 0
         },
         {
           "int": 0
