--- a/contracts/swap-contract/swap-contract.cabal
+++ b/contracts/swap-contract/swap-contract.cabal
@@ -47,6 +47,7 @@ library
 
   exposed-modules:      SwapContract
                         ReferenceContract
+                        StakeContract
                         SwappableDataType
                         ReferenceDataType
                         ReducedFunctions
@@ -88,4 +89,22 @@ executable reference-contract
 
   build-depends:        cardano-api
                       , swap-contract
+
+executable stake-contract
+  import:               base, project-config
+  hs-source-dirs:       app
+  main-is:              stake-contract.hs
+  
+  ghc-options:          -threaded 
+                        -rtsopts 
+                        "-with-rtsopts=-T"
+                        -O2
+
+  build-depends:        cardano-api
+                      , swap-contract
+                      , bytestring
+                      , aeson
+                      , plutus-ledger-api
+                      , useful-funcs
+                      , directory
 
