Added in a optimizer option file and improved swap script naming

--- a/contracts/swap-contract/swap-contract.cabal
+++ b/contracts/swap-contract/swap-contract.cabal
@@ -52,6 +52,7 @@ library
                         SwappableDataType
                         ReferenceDataType
                         ReducedFunctions
+                        OptimizerOptions
 
   build-depends:        bytestring
                       , cardano-api
