--- a/contracts/scripts/production_launch/.env
+++ b/contracts/scripts/production_launch/.env
@@ -8,6 +8,7 @@ cli="cardano-cli"
 
 #path to a node socket
 # socket="/home/cardano/cardano-my-node/db-mainnet/node.socket"
+# socket="/home/cardano/cardano-my-node/relay/db/node.socket"
 socket="/home/logic/Documents/Work/LogicalMechanism/full-node-wallet/node/db-testnet/node.socket"
 
 export CARDANO_NODE_SOCKET_PATH=$socket
